--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,6 @@
     "semi": true,
     "singleQuote": true,
     "tabWidth": 2,
-    "trailingComma": "es5",
-    "printWidth": 80,
-    "bracketSpacing": true,
-    "bracketSameLine": false
-}
+    "trailingComma": "all"
+  }
+  
