--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
@@ -23,6 +22,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "sass": "^1.86.3",
     "sonner": "^2.0.3",
