--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,8 @@
   "hosting": {
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "cleanUrls": true,
+    "trailingSlash": true,
     "rewrites": [
       {
         "source": "**",
