--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.6.0",
+    "github-markdown-css": "^5.8.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.86.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
